fix: spacing in code header with caption

--- a/src/theme-src/css/code.css
+++ b/src/theme-src/css/code.css
@@ -67,7 +67,7 @@ pre {
 }
 
 .code-lang {
-  @apply inline-block p-2 pl-4 uppercase tracking-wider;
+  @apply inline-block p-2 pl-4 mr-auto uppercase tracking-wider;
 }
 
 /* make prompts unselectable */
